--- a/app/src/main/res/layout/item_tank_detail.xml
+++ b/app/src/main/res/layout/item_tank_detail.xml
@@ -10,8 +10,7 @@
         android:id="@+id/tank_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="128dp"
         android:text="Name"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +20,7 @@
         android:id="@+id/tank_item_winrate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="128dp"
         android:layout_marginTop="16dp"
         android:text="Winrate"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,21 +28,31 @@
 
     <TextView
         android:id="@+id/tank_item_tankdesc"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="8dp"
         android:text="tier + nation + type"
-        app:layout_constraintStart_toEndOf="@+id/tank_item_name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tank_item_premium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="8dp"
         android:text="premium"
-        app:layout_constraintStart_toEndOf="@+id/tank_item_winrate"
-        app:layout_constraintTop_toBottomOf="@+id/tank_item_tankdesc" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tank_item_winrate" />
+
+    <ImageView
+        android:id="@+id/tank_item_imageView"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_launcher_background" />
 </androidx.constraintlayout.widget.ConstraintLayout>
